finished the blog page

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -3,7 +3,7 @@ import Logo from '../assets/images/navlogo.png';
 ---
 
 <header class="bg-gray-300 relative">
-  <nav class="flex items-center justify-between max-w-7xl mx-auto px-[5%] md:px-[10%] py-4">
+  <nav class="flex items-center justify-between mx-auto px-[5%] md:px-[10%] py-4">
     <div class="z-50">
       <img src={Logo.src} alt="Lady's Fash Blog Logo" class="w-8 h-8" />
     </div>
@@ -21,7 +21,7 @@ import Logo from '../assets/images/navlogo.png';
 
     <ul class="hidden md:flex justify-between items-center space-x-8">
       <li><a href="/" class="text-lg font-semibold text-black hover:text-pink-500">Home</a></li>
-      <li><a href="/" class="text-lg font-semibold text-black hover:text-pink-500">Blog</a></li>
+      <li><a href="/blog" class="text-lg font-semibold text-black hover:text-pink-500">Blog</a></li>
       <li><a href="/aboutus" class="text-lg font-semibold text-black hover:text-pink-500">About Us</a></li>
       <li><a href="/contact" class="text-lg font-semibold text-black hover:text-pink-500">Contact</a></li>
     </ul>
@@ -33,7 +33,7 @@ import Logo from '../assets/images/navlogo.png';
 
     <div id="mobile-menu" class="fixed inset-0 bg-gray-300 z-40 flex flex-col items-center justify-center space-y-8 md:hidden hidden">
       <a href="/" class="text-2xl font-semibold text-black hover:text-pink-500">Home</a>
-      <a href="/" class="text-2xl font-semibold text-black hover:text-pink-500">Blog</a>
+      <a href="/blog" class="text-2xl font-semibold text-black hover:text-pink-500">Blog</a>
       <a href="/aboutus" class="text-2xl font-semibold text-black hover:text-pink-500">About Us</a>
       <a href="/contact" class="text-2xl font-semibold text-black hover:text-pink-500">Contact</a>
       <hr class="w-1/2 border-gray-400" />
