--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -21,7 +21,18 @@ import Postcard from '../components/post/postcard.astro';
                 {blogPosts.map((post) => ( 
                     <Postcard post={post} />
                 ))}  
-                </div>
+            </div>
+            <div class="w-full">
+                <!-- Pagination could go here in the future -->
+                 <ul class="w-full mx-auto flex justify-center my-8">
+                    <li class="inline-block mx-1 px-3 py-2 bg-pink-200 text-gray-700 rounded-md cursor-not-allowed">Previous</li>
+                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">1</li>
+                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">2</li>
+                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">3</li>
+                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">...</li>
+                    <li class="inline-block mx-1 px-3 py-2 bg-pink-200 text-gray-700 rounded-md cursor-not-allowed">Next</li>
+                 </ul>
+            </div>
         </div>
         
     </main>
