--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,8 @@
 ---
+export const prerender = false;
 import Logo from '../assets/images/navlogo.png';
+// @ts-ignore
+const user = Astro.locals.user;
 ---
 
 <header class="bg-neutral-200 relative">
@@ -25,20 +28,37 @@ import Logo from '../assets/images/navlogo.png';
       <li><a href="/" class=" font-semibold text-black hover:text-pink-500">Home</a></li>
       <li><a href="/blog" class=" font-semibold text-black hover:text-pink-500">Blog</a></li>
       <li><a href="/aboutus" class=" font-semibold text-black hover:text-pink-500">About Us</a></li>
-      <li><a href="/contact" class=" font-semibold text-black hover:text-pink-500">Contact</a></li>
+      { user ? (
+        <li><a href="/dashboard" class=" font-semibold text-black hover:text-pink-500">Dashboard</a></li>
+      ) : null }
     </ul>
 
     <ul class="hidden md:flex justify-between items-center space-x-4">
+      { user ? <li><a href="/api/logout" class=" font-semibold text-black">Logout</a></li> : <>
       <li><a href="/login" class=" font-semibold text-black hover:text-pink-500">Login</a></li>
       <li><a href="/signup" class=" font-semibold text-white bg-pink-600 py-2 px-4 rounded-full hover:bg-pink-700">Sign Up</a></li>
+      </> }
+      
     </ul>
 
     <div id="mobile-menu" class="fixed inset-0 bg-gray-300 z-40 flex flex-col items-center justify-center space-y-8 md:hidden hidden">
       <a href="/" class="text-2xl font-semibold text-black hover:text-pink-500">Home</a>
       <a href="/blog" class="text-2xl font-semibold text-black hover:text-pink-500">Blog</a>
       <a href="/aboutus" class="text-2xl font-semibold text-black hover:text-pink-500">About Us</a>
-      <a href="/contact" class="text-2xl font-semibold text-black hover:text-pink-500">Contact</a>
+      { user ? (
+        <>
+          <hr class="w-1/2 border-gray-400" />
+          <a href="/dashboard" class="text-2xl font-semibold text-black hover:text-pink-500">Dashboard</a>
+        </>
+      ) : null }
+      <!-- <a href="/dashboard" class="text-2xl font-semibold text-black hover:text-pink-500">Dashboard</a> -->
       <hr class="w-1/2 border-gray-400" />
+      { user ? <a href="/api/logout" class="text-2xl font-semibold text-black">Logout</a> : (
+        <>
+          <a href="/login" class="text-2xl font-semibold text-black hover:text-pink-500">Login</a>
+          <a href="/signup" class="text-2xl font-semibold text-white bg-pink-600 py-3 px-10 rounded-full hover:bg-pink-700">Sign Up</a>
+        </>
+      )}
       <a href="/login" class="text-2xl font-semibold text-black">Login</a>
       <a href="/signup" class="text-2xl font-semibold text-white bg-pink-600 py-3 px-10 rounded-full">Sign Up</a>
     </div>
@@ -59,7 +79,6 @@ import Logo from '../assets/images/navlogo.png';
     hamburger.classList.toggle('hidden');
     // @ts-ignore
     closeIcon.classList.toggle('hidden');
-    // Prevent scrolling when menu is open
     document.body.classList.toggle('overflow-hidden');
   });
 </script>
