--- a/src/components/home/posts.astro
+++ b/src/components/home/posts.astro
@@ -1,14 +1,18 @@
 --- 
 import PostCard from '../post/postcard.astro';
-import { blogPosts } from '../../data';
 import { sizingClass } from '../../constants';
+
+import type { BlogPost } from "../../types";
+
+const _posts = await fetch(`${Astro.url.origin}/api/posts`);
+const {posts: blogPosts} = await _posts.json();
 ---
 <section class={sizingClass}>
-		<h2 class=" text-xl lg:text-3xl font-bold mb-6">Latest Posts</h2>
-		<div class="flex flex-col space-y-4">
-        {blogPosts.map((post) => ( 
-            <PostCard post={post} />
-        ))}
-			 
-		</div>
-	</section>
+	<h2 class=" text-xl lg:text-3xl font-bold mb-6">Latest Posts</h2>
+	<div class="flex flex-col space-y-4">
+	{blogPosts.map((post: BlogPost) => ( 
+		<PostCard post={post} />
+	))}
+			
+	</div>
+</section>
