--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,8 +2,12 @@
 import DefaultLayout from '../layouts/DefaultLayout.astro';
 import { sizingClass } from '../constants/index.ts';
 import BlogBanner from '../assets/images/blogbanner.jpg'
-import { blogPosts } from '../data';
 import Postcard from '../components/post/postcard.astro';
+
+import type { BlogPost } from "../types";
+
+const _posts = await fetch(`${Astro.url.origin}/api/posts`);
+const {posts: blogPosts} = await _posts.json();
 ---
 
 <DefaultLayout>
@@ -18,21 +22,11 @@ import Postcard from '../components/post/postcard.astro';
         </div>
         <div class={sizingClass}>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
-                {blogPosts.map((post) => ( 
+                {blogPosts.map((post: BlogPost) => ( 
                     <Postcard post={post} />
                 ))}  
             </div>
-            <div class="w-full">
-                <!-- Pagination could go here in the future -->
-                 <ul class="w-full mx-auto flex justify-center my-8">
-                    <li class="inline-block mx-1 px-3 py-2 bg-pink-200 text-gray-700 rounded-md cursor-not-allowed">Previous</li>
-                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">1</li>
-                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">2</li>
-                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">3</li>
-                    <li class="inline-block mx-1 px-3 py-2 bg-pink-500 text-white rounded-md">...</li>
-                    <li class="inline-block mx-1 px-3 py-2 bg-pink-200 text-gray-700 rounded-md cursor-not-allowed">Next</li>
-                 </ul>
-            </div>
+            
         </div>
         
     </main>
