--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,11 +3,12 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
 import { sizingClass } from '../constants/index.ts';
 import BlogBanner from '../assets/images/blogbanner.jpg'
 import Postcard from '../components/post/postcard.astro';
+import { getPosts } from '../lib/apiHandlers';
 
 import type { BlogPost } from "../types";
 
-const _posts = await fetch(`${Astro.url.origin}/api/posts`);
-const {posts: blogPosts} = await _posts.json();
+const result = await getPosts();
+const blogPosts = result.success ? result.posts : [];
 ---
 
 <DefaultLayout>
